// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders UI 1`] = `
<div>
  <div
    class="text-center w-full max-w-lg"
  >
    <form
      class="bg-white"
    >
      <div
        class="flex flex-wrap -mx-3 mb-2"
      >
        <div
          class="w-full md:w-1/3 px-3 mb-6 md:mb-0"
        >
          <label
            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
            for="chartType"
          >
            Chart type
          </label>
          <div
            class="relative"
          >
            <select
              class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
              name="chartType"
              placeholder="Chart type"
              required=""
            >
              <option
                value="line"
              >
                line
              </option>
              <option
                value="bar"
              >
                bar
              </option>
            </select>
            <div
              class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
            >
              <svg
                class="fill-current h-4 w-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="w-full md:w-1/3 px-3 mb-6 md:mb-0"
        >
          <label
            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
            for="xAxis"
          >
            Group column
          </label>
          <div
            class="relative"
          >
            <select
              class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
              name="xAxis"
              placeholder="Field for X axis"
              required=""
            >
              <option
                value="a"
              >
                a
              </option>
              <option
                value="b"
              >
                b
              </option>
              <option
                value="c"
              >
                c
              </option>
            </select>
            <div
              class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
            >
              <svg
                class="fill-current h-4 w-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="w-full md:w-1/3 px-3 mb-6 md:mb-0"
        >
          <label
            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
            for="yAxis"
          >
            Series
          </label>
          <label
            class="block text-gray-500 font-bold"
          >
            <input
              checked=""
              class="mr-2 leading-tight"
              name="yAxis"
              type="checkbox"
              value="a"
            />
            <span
              class="text-sm"
            >
              a
            </span>
          </label>
          <label
            class="block text-gray-500 font-bold"
          >
            <input
              class="mr-2 leading-tight"
              name="yAxis"
              type="checkbox"
              value="b"
            />
            <span
              class="text-sm"
            >
              b
            </span>
          </label>
          <label
            class="block text-gray-500 font-bold"
          >
            <input
              class="mr-2 leading-tight"
              name="yAxis"
              type="checkbox"
              value="c"
            />
            <span
              class="text-sm"
            >
              c
            </span>
          </label>
        </div>
      </div>
      <div
        class="flex items-center"
      >
        <div
          class="w-1/3"
        />
        <div
          class="w-1/3"
        >
          <button
            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
            type="submit"
          >
            Add view
          </button>
        </div>
        <div
          class="md:w-1/3"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`shows error message for non-compiled view 1`] = `
<div>
  <div>
    ChartBuilder requires resource to be compiled into view.
  </div>
</div>
`;

exports[`shows error message if no schema 1`] = `
<div>
  <div>
    ChartBuilder requires resource schema.
  </div>
</div>
`;
